app/assets/stylesheets/entries.scss
// Place all the styles related to the Entries controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/

.attachment figcaption {
	display: inline-block;
}

.attachment {
	width: 100%;
	border: none !important;
}

.attachment__link {
	display: block;
	text-align: left;
}

.attachment__name {
	display: block;
	text-align: left;
}

.attachment__download {
	text-decoration: underline;
}

.attachment__size::before {
	content: '' !important;
}

